plugins {
    id 'org.springframework.boot' version '2.1.7.RELEASE'
    id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'

    implementation platform('org.joinfaces:joinfaces-dependencies:4.0.7')
    implementation 'org.joinfaces:primefaces-spring-boot-starter'
    implementation 'javax.enterprise:cdi-api'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

bootRun {
    jvmArgs = ['--illegal-access=warn']
}
